--- a/styles/questions.css
+++ b/styles/questions.css
@@ -76,7 +76,7 @@ body {
     
 }
 
-.header .btns .form .btn {
+.header-btn {
     width: 45%;
     height: 85%;
     cursor: pointer;
@@ -132,7 +132,7 @@ body {
     height: 100%;
 }
 
-.main .aside2 .help .btn {
+ .btn {
     padding: 4rem;
     cursor: pointer;
     color: white;
@@ -174,6 +174,7 @@ body {
     justify-content: space-between;
     padding: 1.8rem;
     align-items: center;
+    border-radius: initial;
 }
 
 .option--red {
